# asic-rs

./: .gitignore  Cargo.toml  rust-toolchain.toml
src/: lib.rs  main.rs
src/data/: board.rs  device.rs  fan.rs  hashrate.rs  message.rs  miner.rs  mod.rs  pool.rs
src/data/device/: mod.rs
src/data/device/models/: antminer.rs  braiins.rs  mod.rs  whatsminer.rs
src/miners/: commands.rs  factory.rs  mod.rs  util.rs
src/miners/api/rpc/: btminer.rs  errors.rs  luxminer.rs  mod.rs  status.rs  traits.rs
src/miners/backends/: btminer.rs  mod.rs  traits.rs
src/miners/backends/antminer/v2020/: mod.rs
src/miners/backends/avalonminer/avalon_a/: mod.rs
src/miners/backends/avalonminer/avalon_q/: mod.rs
src/miners/backends/bitaxe/v2_0_0/: mod.rs
src/miners/backends/bitaxe/v2_9_0/: mod.rs
src/miners/backends/braiins/v21_09/: mod.rs
src/miners/backends/braiins/v25_07/: mod.rs
src/miners/backends/epic/v1/: mod.rs
src/miners/backends/luxminer/v1/: mod.rs
src/miners/backends/marathon/v1/: mod.rs
src/miners/backends/nerdaxe/: mod.rs
src/miners/backends/vnish/v1_2_0/: mod.rs  web.rs
src/miners/backends/whatsminer/v1/: mod.rs
src/miners/backends/whatsminer/v2/: mod.rs
src/miners/backends/whatsminer/v3/: mod.rs
src/miners/factory/: commands.rs  hardware.rs  mod.rs  model.rs  traits.rs
src/miners/factory/model/: epic.rs  mod.rs  whatsminer.rs
src/python/: data.rs
