[package]
name = "asic-rs"
version = "0.1.0"
edition = "2024"
license = "LICENSE.txt"

[dependencies]
diqwest = "3.1.0"
dyn_serde = "1.0.2"
futures = "0.3.31"
macaddr = { version = "1.0.1", features = ["serde_std"] }
measurements = "0.11.0"
reqwest = { version = "0.12.12", features = ["json", "gzip"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
async-trait = "0.1.88"
