[package]
name = "asic-rs"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description = "Simple ASIC management in Rust"

[dependencies]
diqwest = "3.2"
futures = "0.3"
macaddr = { version = "1.0", features = ["serde_std"] }
measurements = { version = "0.11", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "gzip", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
url = "2.5"
async-trait = "0.1"
strum = { version = "0.28", features = ["derive"] }
semver = "1.0"
anyhow = "1.0"
ipnet = "2.12"
rand = "0.10"
regex = "1.12"
chrono = "0.4.44"
tokio-stream = "0.1.18"
async-stream = "0.3.6"
sha2 = "0.10.9"
base64 = "0.22.1"
aes = "0.8.4"
hex = "0.4.3"
ecb = "0.1.2"
md5crypt = "1.0.0"
md5 = "0.8"
tracing = { version = "0.1.44", features = ["log"] }

pyo3 = { version = "0.28.2", features = [
    "extension-module",
    "experimental-async",
    "experimental-inspect",
    "multiple-pymethods",
    "time",
], optional = true }
pyo3-async-runtimes = { version = "0.28.0", optional = true, features = ["tokio-runtime", "unstable-streams"] }
pyo3-introspection = { version = "0.28.2", optional = true }
pyo3-log = { version = "0.13.3", optional = true }

[features]
python = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:pyo3-introspection", "dep:pyo3-log"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true

[lib]
name = "asic_rs"
crate-type = ["cdylib", "lib"]
